--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
     "axios": "^0.27.2",
+    "bignumber.js": "^9.1.0",
     "bootstrap": "^5.2.1",
     "dompurify": "^2.4.0",
     "react": "^18.2.0",
