--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,7 @@
     "bn.js": "^5.2.1",
     "bootstrap": "^5.2.1",
     "dompurify": "^2.4.0",
-    "firebase": "^9.11.0",
+    "firebase": "9.10.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
