--- a/frontend/.env
+++ b/frontend/.env
@@ -4,3 +4,4 @@ REACT_APP_FB_PROJECT_ID=cryptokonnect-75d08
 REACT_APP_FB_STORAGE_BUCKET=cryptokonnect-75d08.appspot.com
 REACT_APP_FB_MESSAGING_SENDER_ID=46012888367
 REACT_APP_FB_APP_ID=1:46012888367:web:ed499140ebb2681aaeddda
+GENERATE_SOURCEMAP=false
