--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,11 +14,11 @@
     "bootstrap": "^5.2.1",
     "dompurify": "^2.4.0",
     "ethers": "^5.7.1",
-    "firebase": "9.10.0",
+    "firebase": "^8.10.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
-    "react-firebase-hooks": "^5.0.3",
+    "react-firebase-hooks": "^3.0.5",
     "react-google-button": "^0.7.2",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.4.1",
