--- a/frontend/.env
+++ b/frontend/.env
@@ -1,7 +1,16 @@
-REACT_APP_FB_API_KEY=AIzaSyBsS1yP5wlvmg4rHbBgQS5k4JFkbh81odE
-REACT_APP_FB_AUTH_DOMAIN=cryptokonnect-75d08.firebaseapp.com
-REACT_APP_FB_PROJECT_ID=cryptokonnect-75d08
-REACT_APP_FB_STORAGE_BUCKET=cryptokonnect-75d08.appspot.com
-REACT_APP_FB_MESSAGING_SENDER_ID=46012888367
-REACT_APP_FB_APP_ID=1:46012888367:web:ed499140ebb2681aaeddda
+REACT_APP_FB_API_KEY=AIzaSyA8WgRIwTtrkMEVRyGVLcxI8ULQ22XKAWs
+REACT_APP_FB_AUTH_DOMAIN=chat87-c7fae.firebaseapp.com
+REACT_APP_FB_PROJECT_ID=chat87-c7fae
+REACT_APP_FB_STORAGE_BUCKET=chat87-c7fae.appspot.com
+REACT_APP_FB_MESSAGING_SENDER_ID=794622377358
+REACT_APP_FB_APP_ID=1:794622377358:web:957eb33a9df49cd9ce78df
 GENERATE_SOURCEMAP=false
+
+
+# REACT_APP_FB_API_KEY=AIzaSyBsS1yP5wlvmg4rHbBgQS5k4JFkbh81odE
+# REACT_APP_FB_AUTH_DOMAIN=cryptokonnect-75d08.firebaseapp.com
+# REACT_APP_FB_PROJECT_ID=cryptokonnect-75d08
+# REACT_APP_FB_STORAGE_BUCKET=cryptokonnect-75d08.appspot.com
+# REACT_APP_FB_MESSAGING_SENDER_ID=46012888367
+# REACT_APP_FB_APP_ID=1:46012888367:web:ed499140ebb2681aaeddda
+# GENERATE_SOURCEMAP=false
