--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "bignumber.js": "^9.1.0",
     "bn.js": "^5.2.1",
     "bootstrap": "^5.2.1",
+    "date-fns": "^2.29.3",
     "dompurify": "^2.4.0",
     "ethers": "^5.7.1",
     "firebase": "^8.10.0",
@@ -23,6 +24,7 @@
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "react-select": "^5.5.2",
     "react-sparklines": "^1.7.0",
     "web-vitals": "^2.1.4",
     "web3": "^1.8.0"
